# fluidSimulation

./: .gitignore  CMakeLists.txt
core/classes/: Circle.hpp  Water.hpp  WaterControl.hpp
core/utils/: constants.hpp  functions.hpp  shaderInit.hpp
shaders/: fragment_shader.glsl
src/: main.cpp
src/classes/: Circle.cpp  Water.cpp  WaterControl.cpp
src/utils/: constatns.cpp  functions.cpp  shadersInit.cpp
